# alfred

./: Cargo.toml
src/: language_model.rs  main.rs  opt.rs  prompt_basic.rs
