[package]
name = "alfred"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features=["fmt"] }
sqlx = { package = "sqlx", version="0.7.3", features=["runtime-tokio-rustls", "macros", "uuid", "postgres", "chrono"] }
clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = "1.36.0" , features=["full"]}
reqwest = { version = "0.11.24", features=["rustls", "stream"]}
futures-util = { version = "0.3.30" }